--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"postcss-cli": "^7.1.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
 		"tailwindcss": "^1.2.0"
 	},
@@ -26,7 +27,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
